<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="30sp">

        <TextView
            android:id="@+id/txvPrimeiroNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DigitePrimeiroNumero" />

        <EditText
            android:id="@+id/edtPrimeiroNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:ems="10"
            android:inputType="number|numberDecimal|numberSigned"
            android:text="" />

        <TextView
            android:id="@+id/txvSegundoNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DigiteSegundoNumero" />

        <EditText
            android:id="@+id/edtSegundoNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:ems="10"
            android:inputType="number|numberDecimal|numberSigned"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10sp">

            <Button
                android:id="@+id/btnSomar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Somar"
                android:layout_marginRight="5sp"/>

            <Button
                android:id="@+id/btnSubtrair"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:layout_weight="1"
                android:text="@string/Subtrair" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20sp">

            <Button
                android:id="@+id/btnMultiplicar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5sp"
                android:layout_weight="1"
                android:text="@string/Multiplicacao" />

            <Button
                android:id="@+id/btnDividir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:layout_weight="1"
                android:text="@string/Divisao" />
        </LinearLayout>

        <TextView
            android:id="@+id/txvResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Resultado" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>